[package]
name = "project-euler"
authors = ["Elias Rilegård <e_rilegard@live.se>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
itertools = "0.14"
lazy_static = "1.5"
num-bigint = "0.4"

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.5"
